--- a/package.json
+++ b/package.json
@@ -3,20 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formatjs/intl-pluralrules": "5.2.14",
+    "@formatjs/intl-relativetimeformat": "11.2.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "1.7.3",
     "bootstrap": "5.3.3",
+    "connected-react-router": "6.9.3",
     "font-awesome": "4.7.0",
+    "history": "5.3.0",
     "lodash": "4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "2.10.4",
     "react-dom": "^18.3.1",
+    "react-intl": "6.6.8",
+    "react-redux": "9.1.2",
     "react-router-dom": "6.26.0",
     "react-scripts": "5.0.1",
     "react-slick": "0.30.2",
     "react-toastify": "10.0.5",
+    "redux": "5.0.1",
+    "redux-auth-wrapper": "3.0.0",
+    "redux-logger": "3.0.6",
+    "redux-persist": "6.0.0",
+    "redux-state-sync": "3.1.4",
+    "redux-thunk": "3.1.0",
     "sass": "^1.77.8",
     "slick-carousel": "1.8.1",
     "web-vitals": "^2.1.4"
