--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-PORT=3000
+PORT=3001
 NODE_ENV=development
+
+# bắt buộc có REACT_APP_
+REACT_APP_BACKEND_URL=http://localhost:8080
+
+#The base URL for all locations. If your app is served from a sub-directory on your server, you'll want to set
+#this to the sub-directory. A properly formatted basename should have a leading slash, but no trailing slash.
+# để khoảng trống sẽ có "%20" -> nên để /
+REACT_APP_ROUTER_BASE_NAME=/
