--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "3.1.0",
     "sass": "^1.77.8",
     "slick-carousel": "1.8.1",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
