--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "2.10.4",
+    "react-custom-scrollbars": "4.2.1",
     "react-dom": "^18.3.1",
     "react-intl": "6.6.8",
     "react-redux": "9.1.2",
